Added dynamic gc runs and VM options.